# src/common/dtos/createUser.dto.ts
@@ -1,0 +1,12 @@
+import { IsEmail, IsString, IsNotEmpty, MinLength } from 'class-validator';
+
+export class CreateUserDTO {
+  @IsEmail()
+  @IsNotEmpty()
+  public email: string;
+
+  @IsString()
+  @IsNotEmpty()
+  @MinLength(6)
+  public password: string;
+}
