# src/common/dtos/updateUser.dto.ts
@@ -1,0 +1,12 @@
+import { IsString, IsBase64 } from 'class-validator';
+
+export class UpdateUserDTO {
+  @IsString()
+  displayName: string;
+
+  @IsString()
+  profileInfo: string;
+
+  @IsBase64()
+  photo: string;
+}
