# swagger.yaml
@@ -1,126 +1,180 @@
 tags:
-- name: users
-  description: users API
+- name: Authentication
+  description: Authentication
+- name: User
+  description: User
 
-paths:
-# [GET] users
-  /users:
-    get:
-      tags:
-      - users
-      summary: Find All Users
-      responses:
-        200:
-          description: 'OK'
-        500:
-          description: 'Server Error'
-
-# [POST] users
-    post:
-      tags:
-      - users
-      summary: Add User
-      parameters:
-      - name: body
-        in: body
-        description: user Data
-        required: true
-        schema:
-          $ref: '#/definitions/users'
-      responses:
-        201:
-          description: 'Created'
-        400:
-          description: 'Bad Request'
-        409:
-          description: 'Conflict'
-        500:
-          description: 'Server Error'
-
-# [GET] users/id
-  /users/{id}:
-    get:
-      tags:
-      - users
-      summary: Find User By Id
-      parameters:
-      - name: id
-        in: path
-        description: User Id
-        required: true
-        type: integer
-      responses:
-        200:
-          description: 'OK'
-        409:
-          description: 'Conflict'
-        500:
-          description: 'Server Error'
-
-# [PUT] users/id
-    put:
-      tags:
-      - users
-      summary: Update User By Id
-      parameters:
-      - name: id
-        in: path
-        description: user Id
-        required: true
-        type: integer
-      - name: body
-        in: body
-        description: user Data
-        required: true
-        schema:
-          $ref: '#/definitions/users'
-      responses:
-        200:
-          description: 'OK'
-        400:
-          description: 'Bad Request'
-        409:
-          description: 'Conflict'
-        500:
-          description: 'Server Error'
-
-# [DELETE] users/id
-    delete:
-      tags:
-      - users
-      summary: Delete User By Id
-      parameters:
-      - name: id
-        in: path
-        description: user Id
-        required: true
-        type: integer
-      responses:
-        200:
-          description: 'OK'
-        409:
-          description: 'Conflict'
-        500:
-          description: 'Server Error'
-
-# definitions
-definitions:
-  users:
-    type: object
-    required:
-        - email
-        - password
-    properties:
-      id:
-        type: integer
-        description: user Id
-      email:
-        type: string
-        description: user Email
-      password:
-        type: string
-        description: user Password
-
+host: http://localhost:3005
+basePath: /api/v1
 schemes:
  - https
  - http
+
+paths:
+# [POST] /api/v1/signup
+  /api/v1/signup:
+    post:
+      tags:
+      - Authentication
+      summary: Registration
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
+                  type: string
+                  description: user email
+                password:
+                  type: string
+                  description: user password
+      responses:
+        201:
+          description: 'Created'
+          content:
+            application/json:
+              schema:
+                 $ref: '#/components/schemas/UserWithToken'
+        400:
+          description: 'Bad Request'
+        401:
+          description: 'Unauthorized'
+        409:
+          description: 'Conflict'
+
+  /api/v1/login:
+    post:
+      tags:
+      - Authentication
+      summary: Login
+      requestBody:
+        content:
+          application/json:
+            schema:
+              anyOf:
+              - type: object
+                properties:
+                  email:
+                    type: string
+                    description: user email
+                  password:
+                    type: string
+                    description: user password
+              - type: object
+                properties:
+                  password:
+                    type: string
+                    description: user password
+      responses:
+        200:
+          description: 'Created'
+          content:
+            application/json:
+              schema:
+                 $ref: '#/components/schemas/UserWithToken'
+        400:
+          description: 'Bad Request'
+        401:
+          description: 'Not Found'
+        404:
+          description: 'Not Found'
+
+  /api/v1/users/password:
+    put:
+      tags:
+      - User
+      summary: Update User Password
+      security:
+        - bearerAuth: []
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                oldPassword:
+                  type: string
+                  description: user old password
+                newPassword:
+                  type: string
+                  description: user new password
+      responses:
+        200:
+          description: 'Ok'
+        400:
+          description: 'Bad Request'
+        401:
+          description: 'Not Found'
+        404:
+          description: 'Not Found'
+
+
+
+  /api/v1/users:
+    put:
+      tags:
+      - User
+      summary: Update User 
+      security:
+        - bearerAuth: []
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                displayName:
+                  type: string
+                  description: user displayName
+                profileInfo:
+                  type: string
+                  description: user description
+                photo:
+                  type: string
+                  format: base64
+                  description: user photo
+      responses:
+        200:
+          description: 'Ok'
+        400:
+          description: 'Bad Request'
+        404:
+          description: 'Not Found'
+
+securitySchemes:
+  bearerAuth:            # arbitrary name for the security scheme
+    type: http
+    scheme: bearer
+    bearerFormat: JWT    # optio
+
+# definitions
+components:
+  schemas:
+    User:
+      type: object
+      properties:
+        id:
+          type: string
+        email:
+          type: string
+        displayName:
+          type: string
+        profileInfo:
+          type: string
+        photo:
+          type: string
+        verified:  
+          type: string
+
+
+    UserWithToken:
+      allOf:     
+        - $ref: '#/components/schemas/User'
+        - type: object
+          properties:
+            token:
+              type: string
+
+
+            
